spec/Language Syntax.txt
# Language Syntax

program          = (statement | comment)*
statement        = ifstmt | loop | block | return | break | continue | exprstmt | no-op
ifstmt           = '??' expression statement ('::' statement)?
expression       = assignexpr
assignexpr       = ('$')? expression (('=' | ":=") assignexpr)? | ifexpr 
ifexpr           = logic ('?' ifexpr ':' ifexpr)?
logic_or         = logic_and ("||" logic_and)*
logic_and        = equality ("&&" equality)* 
equality         = relation (("==" | "!=") relation)*
relation         = basic (rel-op (basic | ident rel-op basic))?
rel-op           = '>' | '>=' | '<' | '<='
basic            = factor (("+" | "-") factor)*
factor           = unary (("*" | "/" | "%") unary)*
unary            = ("!" | "+" | "-" | "#" | "~" | "&" | "&&") unary | postary
postary          = primary (arguments | indexing | '.' ident)*
arguments        = '(' (expression (',' expression)*)? ')'
indexing         = '[' (expression | (arr-range)) (',' (expression | arr-range))? ']'
arr-range        = (expression)? ':' (expression)?
primary          = ident | float | string | array | object | grouping | lambda | builder | global | nil
ident            = (alphabet | '_') (alphabet | '_' | digit)*
alphabet         = ('a'->'z' | 'A->Z')
digit            = '0'->'9'
float            = number ('.' (number)?)?
number           = (digit)+
array            = '[' (expression (',' expression)*)? ']'
string           = '"' (writable)* '"'
writable         = ' ' -> '~'
grouping         = '(' expression ')'
lambda           = "(" ident ("," ident)* ")" block
builder          = '[' (range)? ';' (expression)? ';' expression ']'
global           = '$' ident
nil              = '_'
loop             = ">>" expression statement
prototype        = block
block            = '{' (statement)* '}'
exprstmt         = expression
return           = "->" expression
break            = "**"
continue         = "<<"
no-op            = ';'
comment          = "//" writable*
